--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ opendal = "0.50.2"
 sha256 = "1.5.0"
 speedy = "0.8.7"
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "io-std", "io-util", "sync", "macros", "signal"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
